add A* raycasting logic